--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,24 @@
 .border{
     padding: 10px;
 }
+
+.articulo{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+}
+
+.table td, .table th {
+    padding: 0!important;
+}
+
+.botones {
+    display: flex;
+}
+.sueldo {
+    margin-top: 23px;
+}
+.totales{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+}
